Hopefully fixed sizing issues on mobile

--- a/headerStyles.css
+++ b/headerStyles.css
@@ -44,6 +44,19 @@
   font-size: calc((1.7vw + 0.3vh));
   white-space: nowrap
 }
+.header .smallTitle 
+{
+  flex-grow: 1;
+  font-size: calc((1.7vw + 0.3vh));
+  white-space: nowrap;
+  display: none;
+}
+
+@media (max-width: 600px)
+{
+  .header .title { display: none; }
+  .header .smallTitle   { display: inline-flex; }
+}
 
 /* Buttons */
 .header .buttons 
