--- a/showcase/showcaseStyles.css
+++ b/showcase/showcaseStyles.css
@@ -114,3 +114,12 @@ body
     font-size: 16px;
   }
 }
+
+@media (max-width: 600px) 
+{
+
+  .project-video 
+  {
+    height: 150px;
+  }
+}
